--- a/AUTHORS
+++ b/AUTHORS
@@ -2,3 +2,5 @@
 
 Ezra Nobrega <ezra.nobrega@outlook.com>
 Justin Majetich <justinmajetich@gmail.com>
+David Egunjobi <davidjoy.win@gmail.com>
+Favour Onyeaso <favouronyeaso@gmail.com>
